# krakenuniq-poleshift

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: kraken_headers.hpp  krakendb.cpp  quickfile.hpp
